--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="HelloWorld" basedir="." default="main">
+<project name="ant-test" basedir="." default="main">
 
     <property name="src.dir" value="src/main/java"/>
     <property name="webapp.dir" value="src/main/webapp"/>
