--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,7 @@
 			<param-name>contextConfigLocation</param-name>
 			<param-value>
 				/WEB-INF/resources/mvc-quick-start.xml
+				/WEB-INF/resources/aopPojo.xml
 			</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
