test 폴더 밑으로 class만들어보기

--- a/build.xml
+++ b/build.xml
@@ -5,11 +5,12 @@
     <property name="web-inf.dir" value="${webapp.dir}/WEB-INF"/>
     <property name="lib.dir" value="lib"/>
     <property name="target.dir" value="target"/>
-    <property name="classes.dir" value="${target.dir}/classes"/>
+    <property name="classes.dir" value="${target.dir}/classes/main"/>
+    <property name="classes.test.dir" value="${target.dir}/classes/test"/>
     <property name="TITLE-PROJECT" value="antmvn"/>
     <property name="report.dir" location="report" />
     <property name="resources.dir" location="src/main/webapp/WEB-INF/resources" />
-    
+
 
     <!-- 1. classpath를 지정한다. 라이브러리  폴더 위치 -->
     <path id="libpath">
@@ -22,16 +23,22 @@
     </target>
 
     <!-- Create folders -->
-	<target name="init" depends="clean">
-		<mkdir dir="${report.dir}" />
-	</target>
+    <target name="init" depends="clean">
+        <mkdir dir="${report.dir}" />
+    </target>
     <!-- 3. 컴파일 : 소스폴더 위치, 클래스들이 만들어질 타겟과, classpathref로 라이브러리 참조폴더 정의해준다. -->
     <target name="compile" depends="init">
         <mkdir dir="${classes.dir}"/>
         <javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="libpath" encoding="utf-8" includeantruntime="true"/>
     </target>
 
-   
+    <target name="compile-test" depends="compile">
+        <mkdir dir="${classes.test.dir}"/>
+        <javac srcdir="${src.dir}" destdir="${classes.test.dir}" classpathref="libpath" encoding="utf-8" includeantruntime="true"/>
+    </target>
+
+
+
 
     <!-- 4. war가 어디에 만들어질 것인가? 메인클래스위치도 지정해준다. -->
     <target name="war" depends="init, clean,compile">
@@ -42,7 +49,7 @@
         </war>
     </target>
 
-      <!-- 테스팅 : batchtest는 하위 폴더의 패턴에 맞는것 모두 테스트 시켜주는것. -->
+    <!-- 테스팅 : batchtest는 하위 폴더의 패턴에 맞는것 모두 테스트 시켜주는것. -->
     <target name="test" depends="compile">
         <junit printsummary="yes" haltonfailure="no">
             <classpath>
@@ -58,8 +65,8 @@
     </target>
     <!-- 5. war 복사해보기 -->
     <target name="copy" depends="war">
-		<echo message="Copy ready" />
+        <echo message="Copy ready" />
         <copy file="${target.dir}/${TITLE-PROJECT}.war" todir="${tomcat-webapps}"/>
-	</target>
+    </target>
 
 </project>
